fixed spacing between buttons in media query

--- a/src/atividade_cores_style.css
+++ b/src/atividade_cores_style.css
@@ -318,7 +318,7 @@ footer {
 
 @media screen and (max-width: 812px){
     button {
-        margin: 10px auto;
+        margin: 10px;
     }
 
     footer{
